// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video renders the component 1`] = `
<video
  controls={true}
  data-autoplay={true}
  id="foo"
  onEnded={[Function]}
  onLoadedMetadata={[Function]}
/>
`;

exports[`Video renders the component 2`] = `
<video
  controls={false}
  data-autoplay={false}
  id="foo"
  onEnded={[Function]}
  onLoadedMetadata={[Function]}
/>
`;
